--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">BT-Stat</string>
     <string name="action_settings">Favourite</string>
-    <string name="title_activity_main2">Main2Activity</string>
     <string name="in1_hint_dialog">Name</string>
     <string name="positive_button">Add</string>
     <string name="negative_button">Cancel</string>
@@ -9,4 +8,14 @@
     <string name="yes_button">Yes</string>
     <string name="no_button">No</string>
     <string name="update_button">Update</string>
+    <string name="hour"> h</string>
+    <string name="minutes">min</string>
+    <string name="seconds">sec</string>
+    <string name="id" translatable="false">Id</string>
+    <string name="reset_stats">reset</string>
+
+    <plurals name="day">
+        <item quantity="one">%d day </item>
+        <item quantity="other">%d days </item>
+    </plurals>
 </resources>
