--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -14,6 +14,7 @@
     <string name="minutes">min</string>
     <string name="seconds">sec</string>
     <string name="reset_stats">Zresetuj</string>
+    <string name="refresh">Odśwież</string>
 
     <plurals name="day">
         <item quantity="one">%d dzień </item>
